# esp32-to-micropython

./: .gitmodules  README.md  gpio_test.py  led_blink.py  play_wav_local.py  wav_play.py
.github/workflows/: build.yml  build_audio_bin.yml
audio/: mk_audio_tone.py
components/camera/: Kconfig
components/serial/: CMakeLists.txt  Kconfig  component.mk
components/serial/port/: TF_Config.h
components/xmodem/: CMakeLists.txt
components/xmodem/examples/xmodem_receiver/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults.esp8266
components/xmodem/examples/xmodem_receiver/main/: CMakeLists.txt  xmodem_receiver_example.c
components/xmodem/examples/xmodem_sender/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults.esp8266
components/xmodem/examples/xmodem_sender/main/: CMakeLists.txt  Kconfig.projbuild  xmodem_sender_example.c
components/xmodem/include/: esp_xmodem.h
components/xmodem/src/: esp_xmodem_common.c  esp_xmodem_receiver.c  esp_xmodem_sender.c  esp_xmodem_transport.c
components/xmodem/src/priv/: esp_xmodem_priv.h
detect/: 0001-support-DM9051.patch  AWSConfig.py  LED.py  TCA9555.py  TinyFrame.py  beep.py  bleTest.py  certificate.pem  cmd_id.py  connectNetwork.py  do_update.py  esp_audio.py  ethernet.py  i2cbus.py  lock.py  main.py  mqtt.py  mqttAuth.py  mqttEvent.py  mqttLog.py  mqttMsgHandle.py  mqttOTA.py  mqttShadow.py  ota.py  private.pem.key  qrcodeScan.py  readme.md  regDevID.py  scanCode.py  uart.py
micropython-camera-driver/: README.md
mqttOTA/: AWSConfig.py  README.md  authMqtt.py  mqttOTA.py  pmqtt.py
(+47 files in other folders)
